--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Wire Viewer</string>
     <string name="title_item_detail">Item Detail</string>
-    <string name="somethingwentwrong">Something went wrong, please try again.</string>
+    <string name="something_went_wrong">Something went wrong, please try again.</string>
     <string name="failure">Failure</string>
 </resources>
