--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="title_item_detail">Item Detail</string>
     <string name="something_went_wrong">Something went wrong, please try again.</string>
     <string name="failure">Failure</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_data">No results were returned</string>
+    <string name="empty" />
 </resources>
